添加伪短信验证逻辑，代码仍未优化

--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+<!--哇靠，劳资大二美好的暑假就用来写这玩意儿，f**k-->
 </html>
