--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html >
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,7 +21,7 @@
     -->
     <title>借贷超市</title>
   </head>
-  <body>
+  <body >
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -37,5 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-<!--哇靠，劳资大二美好的暑假就用来写这玩意儿，f**k-->
+<!--靠，这代码写的劳资自己都看不过去了-->
 </html>
